2007-02-06 Eyal Alaluf <eyala@mainsoft.com>

	* Menu.cs ImageMap.cs Panel.cs TreeView.cs: Ensure that the NavigateUrl
	  property is rendered as a RenderURL for J2EE portlets.

2007-02-05  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* BaseValidator.cs: refactored RegisterValidatorCommonScript to use
	RegisterClientScriptInclude instead of RegisterClientScriptBlock

2007-02-05 Igor Zelmanovich <igorz@mainsoft.com>

	* DataBoundControl.cs:
	* DetailsView.cs:
	* FormView.cs:
	PerformDataBinding is called with RequiresDataBinding was set false

2007-02-05 Igor Zelmanovich <igorz@mainsoft.com>

	* FormView.cs:
	fixed validation flow.	

2007-02-05 Igor Zelmanovich <igorz@mainsoft.com>

	* DetailsView.cs:
	fixed validation flow.	

2007-02-04 Igor Zelmanovich <igorz@mainsoft.com>

	* CustomValidator.cs:
	ValidateEmptyText is considered on client side.	

2007-02-04 Igor Zelmanovich <igorz@mainsoft.com>

	* Button.cs:
	* ButtonField.cs:
	* CommandField.cs:
	* DataControlButton.cs:
	* DataControlField.cs:
	* ImageButton.cs:
	* PagerSettings.cs:						
	Internal classes are used in databound controls for buttons 
	are derived from right types. It allows to have access to them by casting
	to public types. This trick is used in one of starter kits of MS.

2007-02-04 Igor Zelmanovich <igorz@mainsoft.com>

	* Panel.cs: fixed: reverted r71441.
	* TreeView.cs: used internal RegisterWebFormClientScript API 
	to cause the relevant script be included.	

2007-02-01 Adar Wesley <adarw@mainsoft.com>

	* FormView.cs: fixed events ModeChanging and ModeChanged 
	to be raized in all relevant situations.

2007-02-01 Igor Zelmanovich <igorz@mainsoft.com>

	* ValidationSammary.cs: fixed:
	control is rendered even if there is no validators on the page.
	important if the page contain a client side script that refer to the 
	id of the validation summary div.	 

2007-01-31 Igor Zelmanovich <igorz@mainsoft.com>

	* CheckBoxList.cs:
	* DropDownList.cs:
	* ListBox.cs:
	* RadioButtonList.cs: