@@ -1,3 +1,9 @@
+2007-02-06 Igor Zelmanovich <igorz@mainsoft.com>
+
+	* DetailsView.cs: fixed: 
+	PageIndex, CreateChildControls, 
+	works properly with not ICollection data source.	
+
 2007-02-06 Eyal Alaluf <eyala@mainsoft.com>
 
 	* Menu.cs ImageMap.cs Panel.cs TreeView.cs: Ensure that the NavigateUrl
